--- a/templates/index.html
+++ b/templates/index.html
@@ -178,6 +178,9 @@
                             <button id="demo-btn" class="btn btn-warning">
                                 <i class="fas fa-eye"></i> View Demo Results
                             </button>
+                            <button id="demo-none-btn" class="btn btn-outline-warning">
+                                <i class="fas fa-times-circle"></i> Demo "None" Detection
+                            </button>
                             <button id="analyze-btn" class="btn btn-outline-primary">
                                 <i class="fas fa-brain"></i> Classification Only
                             </button>
